--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ grpcio==1.29.0
 gunicorn==19.9.0
 h5py==2.10.0
 optional-django==0.1.0
+Pillow==7.1.2
 pipenv==2020.6.2
 pluggy==0.13.1
 protobuf==3.12.0
