--- a/requirements.txt
+++ b/requirements.txt
@@ -20,5 +20,7 @@ pyzmq==19.0.1
 requests==2.23.0
 requests-oauthlib==1.3.0
 sqlparse==0.3.0
+virtualenv==20.0.21
+virtualenv-clone==0.5.4
 webencodings==0.5.1
 websocket-client==0.48.0
